# hashtag_admin_bot

./: .env.example  .gitignore  README.md  configreader.py  database.db  main.py  pyproject.toml  requirements.txt
bot/: __main__.py
bot/src/aiogram_dialog/: __init__.py
bot/src/aiogram_dialog/admin_dialogs/: __init__.py  getters.py  keyboards.py  on_clicks.py  states.py  windows.py
bot/src/aiogram_dialog/user_dialogs/: __init__.py  getters.py  keyboards.py  on_clicks.py  states.py  windows.py
bot/src/db/: base.py  redis.py
bot/src/db/models/: models.py
bot/src/db/repositories/: repo.py
bot/src/exceptions/: group_exceptions.py
bot/src/filters/: admin_filters.py
bot/src/handlers/: __init__.py  sms_handler.py  start.py
bot/src/middleware/: db.py  i18n_dialog.py
bot/src/services/: common_services.py  group_manager.py  sms_mailing_service.py
bot/src/utils/: misc.py  repository.py  unitofwork.py
bot/src/utils/i18n_utils/: i18n_format.py
scheduler/: func.py  main.py
systemd/: bot.service
