[project]
name = "admin-game-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "aiogram-dialog>=2.3.1",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.39",
    "twilio>=9.5.1",
]
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
lint.fixable = ["ALL"]
lint.unfixable = []
